[package]
name = "hex"
version = "0.2.0"
authors = ["Abraham Egnor <abe.egnor@gmail.com>"]
edition = "2018"

[dependencies]
num-iter = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
quickcheck = "0.9.0"
rand = "0.7.0"
